<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.metay.mareu.ui.meeting_list.AddMeetingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/blue_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/btn_create"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:contentDescription="@string/meeting_name"
            android:id="@+id/layout_name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_create_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterMaxLength="25"
            app:counterEnabled="true"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:hint="@string/meeting_name"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:contentDescription="@string/date"
            android:id="@+id/layout_date"
            app:errorEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintTop_toBottomOf="@id/layout_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_time"
            android:layout_marginEnd="4dp"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="date"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:contentDescription="@string/time"
            android:id="@+id/layout_time"
            app:errorEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_access_time_24"
            app:layout_constraintTop_toBottomOf="@id/layout_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_date"
            android:layout_marginStart="4dp"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/time"
                android:inputType="time"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:contentDescription="@null"
            android:id="@+id/layout_room"
            app:errorEnabled="true"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_meeting_room_24"
            app:startIconTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/layout_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_room"
            app:layout_gravity="center_vertical"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:importantForAccessibility="no"
                android:id="@+id/input_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room"
                android:inputType="none"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_s_room"
            app:layout_constraintTop_toBottomOf="@id/layout_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_room"
            android:paddingVertical="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:contentDescription="@string/guests"
            android:id="@+id/layout_guests"
            app:errorEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_baseline_add_24"
            app:endIconCheckable="true"
            app:endIconContentDescription="@string/clear_all_filter"
            app:helperTextEnabled="true"
            app:helperText="Click to + button to add a guest"
            app:layout_constraintTop_toBottomOf="@id/layout_room"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_guests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guests"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:contentDescription="@string/participants_of_the_meeting"
            android:id="@+id/tvGuests"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:freezesText="true"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/layout_guests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:contentDescription="@string/cancel"
        android:id="@+id/btn_cancel"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:contentDescription="@string/delete_all_participants"
        app:icon="@drawable/ic_baseline_delete_24"
        android:enabled="false"
        android:id="@+id/btn_clear_guests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_guests"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:contentDescription="@string/create"
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>